--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -4,90 +4,49 @@ author: Mattt Thompson
 translator: Ricky Tan
 category: Cocoa
 tags: nshipster
-excerpt: "NSError is the unsung hero of the Foundation framework. Passed gallantly in and out of perilous method calls, it is the messenger by which we are able to contextualize our failures."
-excerpt: "NSError 是基础框架中的无名英雄。勇敢地传入传出危险的方法调用，通过消息发送者我们就可以从所关联的上下文中找出我们的失败。"
+excerpt: "NSError 是基础框架中的无名英雄。勇敢的在危险的方法调用时传入传出，通过消息发送者我们就可以从所关联的上下文中找出我们的错误。"
 ---
-
-> To err is human.
-> To `NSError` is Cocoa.
 
 > 是个人就会犯错。
 > 用 Cocoa 就会用到 `NSError`。
 
-
-All programs on a Unix system are a child process of another process, forking all the way from the original process, the unmoved mover: `pid` 1 (which in the case of OS X is `launchd`). When the executable finishes, it communicates a status code between `0` and `255` to its parent, as a way to communicate why or how the process exited. `0` means "everything exited normally; nothing to report here", while any non-zero value indicates something that the parent process should be aware of. Exit status codes may be used to indicate whether the process crashed, or terminated prematurely. By some conventions, the higher the return value, the more severe the cause of the error.
-
 Unix 系统中所有的程序都是其他进程的子进程，从原始进程一路分支（fork）出来，即那个不为所动的发起者：`pid` 1 （OS X 系统中是 `launchd`）。当可执行文件结束时，它用一个 `0` 到 `255` 状态码与父进程通信，告诉它程序为什么或怎么退出的。`0` 意味着“一切正常退出；没有可通告的”，非零值表示发生了父进程需要注意的事。退出状态码可以用来表示进程是否崩溃，或者提前终止。按照惯例，越大的值，引发的错误越严重。
 
-In an OO paradigm processes are, for the most part, abstracted away, leaving only objects and the messages they pass between one another. That distinction between success and failure (and between different varieties of failure) is still useful in object-oriented programming. But considering that methods are often wont to return values other than `BOOL`, this can create something of a predicament.
-
-在面向对象编程范式中，大部分进程被抽象出来，只剩下对象及它们之间传递的消息。但是成功还是失败（以及不同种类的失败）在面向对象编程中仍然十分有效。但是考虑到方法通常不会返回非 `BOOL` 值，这就要创造一个新的东西还解决这个困境了。
-
-Languages more drama-prone and trigger-happy than Objective-C reconcile this by abusing the hell out of exceptions, raising at even the slightest breach in contract. To our good fortune as Cocoanauts, however, Objective-C takes a more civilized approach when it comes to giving us bad news, and that approach is `NSError`.
+在面向对象编程范式中，大部分进程被抽象出来，只剩下对象及它们之间传递的消息。但是成功还是失败（以及不同种类的失败）在面向对象编程中仍然十分有用。但是考虑到方法通常不会返回非 `BOOL` 值，这就要创造一个新的东西还解决这个困境了。
 
 那些比 Objective-C 更小题大做更好战的语言通过滥用异常来调解这个问题，哪怕一点点的不合规也抛异常。不过作为果粉幸运的是，当有坏事发生时 Objective-C 使用一种更文雅的方式，那便是 `NSError`。
 
 * * *
 
-`NSError` is the unsung hero of the Foundation framework. Passed gallantly in and out of perilous method calls, it is the messenger by which we are able to contextualize our failures. No news is good news, when it comes to such matters, but passing a `nil` pointer to an `NSError **` isn't going to do you any favors.
-
 `NSError` 是基础框架中的无名英雄。勇敢地传入传出危险的方法调用，通过消息发送者我们就可以从所关联的上下文中找出我们的失败。当涉及到这样的问题时肯定没什么好事，但是传入 `nil` 到 `NSError **` 参数中并没有什么卵用。
-
-`NSError` is toll-free bridged with `CFError`, but it's unlikely that you'll ever find a reason to dip down to its Core Foundation counterpart.
 
 `NSError` 是 `CFError` 的无缝转换对象，但是你没理由会去深挖它在 Core Foundation 中对应的部分。
 
-Each `NSError` object encodes three critical pieces of information: a status `code`, corresponding to a particular error `domain`, as well as additional context provided by a `userInfo` dictionary.
-
 每个 `NSError` 对象编码了三部分关键的信息：状态码 `code`，对应的特定错误域 `domain`，还有额外的通过 `userInfo` 字典提供的上下文。
-
-## `code` & `domain`
 
 ## `code` 和 `domain`
 
-Like exit status codes, an `NSError -code` signals the nature of the problem. These status codes are defined within a particular error `domain`, in order to avoid overlap and confusion. These status codes are generally defined by constants in an `enum`.
-
 与退出状态码不同的是，`NSError -code` 表示问题的本质。这些状态码都在一个特定的错误域 `domain` 中定义，以防重叠和混淆。这些状态码一般用 `enum` 来定义。
 
-For example, in the `NSCocoaErrorDomain`, the status code for an error caused by `NSFileManager` attempting to access a non-existant file is `4`, as defined by `NSFileNoSuchFileError`. However, `4` in `NSPOSIXErrorDomain` refers to a [POSIX `EINTR`, or "interupted function" error](http://250bpm.com/blog:12).
-
 例如，在 `NSCocoaErrorDomain` 中，由 `NSFileManager` 访问一个不存在的文件产生的错误状态码是 `4`，正如 `NSFileNoSuchFileError` 所定义的。然而，`4` 在 `NSPOSIXErrorDomain` 中指代 [POSIX `EINTR`，或者“中断函数”错误](http://250bpm.com/blog:12)。
-
-Now, anyone coming from a systems programming background may have just had a vision of a `switch` statement with smatterings of `printf` to translate numeric constants into something human-readable. `NSError` is way ahead of you.
 
 如今，任何有系统编程背影的人也许会只用一个 `switch` 语句加上少量的 `printf` 把数字常量翻译为人类可以阅读的信息。`NSError` 永远领先于你。
 
 ## `userInfo`
 
-What gives `NSError` its particular charm is everyone's favorite grab bag property: `userInfo`. As a convention throughout Cocoa, `userInfo` is a dictionary that contains arbitrary key-value pairs that, whether for reasons of subclassing or schematic sparsity, are not suited to full-fledged properties in and of themselves. In the case of `NSError`, there are several special keys that correspond to `readonly` properties.
-
-是什么给了 `NSError` 它独特的魅力？正是这个每个人都喜欢的大杂烩属性：`userInfo`。作为整个 Cocoa 的惯例，`userInfo` 是一个可以包含任意键值对的字典，无论是~~子类化还是稀疏的示意，都不合适加上或去掉所有的属性~~（Help，不会翻了）。在 `NSError` 这个例子中，有一些特定的键值对应着只读属性。
-
-Three are generally useful:
+是什么给了 `NSError` 它独特的魅力？正是这个每个人都喜欢的大杂烩属性：`userInfo`。作为整个 Cocoa 的惯例，`userInfo` 是一个可以包含任意键值对的字典，无论是为了继承或降低耦合的目的, 它都不适合拿来填满各种杂七杂八的属性。在 `NSError` 这个例子中，有一些特定的键值对应着只读属性。
 
 这三个通常很有用：
 
-- `localizedDescription` (`NSLocalizedDescriptionKey`): A localized description of the error.
-- `localizedRecoverySuggestion` (`NSLocalizedRecoverySuggestionErrorKey`): A localized recovery suggestion for the error.
-- `localizedFailureReason` (`NSLocalizedFailureReasonErrorKey`): A localized explanation of the reason for the error.
-
 - `localizedDescription` (`NSLocalizedDescriptionKey`): 一段本地化的错误描述。
 - `localizedRecoverySuggestion` (`NSLocalizedRecoverySuggestionErrorKey`): 一段该错误的恢复建议。
-- `localizedFailureReason` (`NSLocalizedFailureReasonErrorKey`): 一段地本化的错误解释。
-
-...whereas three others are specific to OS X:
+- `localizedFailureReason` (`NSLocalizedFailureReasonErrorKey`): 一段本地化的错误解释。
 
 而另外三个只用在 OS X：
-
-- `localizedRecoveryOptions` (`NSLocalizedRecoveryOptionsErrorKey`): An array containing the localized titles of buttons appropriate for displaying in an alert panel
-- `recoveryAttempter` (`NSRecoveryAttempterErrorKey`)
-- `helpAnchor` (`NSHelpAnchorErrorKey`): Used by an alert panel by a help anchor button.
 
 - `localizedRecoveryOptions` (`NSLocalizedRecoveryOptionsErrorKey`): 一个包含了本地化的按钮标题的数组，用于展示在警告框中。
 - `recoveryAttempter` (`NSRecoveryAttempterErrorKey`)
 - `helpAnchor` (`NSHelpAnchorErrorKey`): 用于警告框中的帮助按钮。
-
-Here's how to construct `NSError` with a `userInfo` dictionary:
 
 以下是如何用 `userInfo` 字典来构造一个 `NSError`:
 
@@ -102,11 +61,7 @@ NSError *error = [NSError errorWithDomain:NSHipsterErrorDomain
                                  userInfo:userInfo];
 ~~~
 
-The advantage of encapsulating this information in an object like `NSError`, as opposed to, say, throwing exceptions willy-nilly, is that these error objects can be easily passed between different objects and contexts.
-
 相比于无可奈何地抛出异常，将这些信息包装在一个类似于 `NSError` 这样的对象中的优势在于，这些错误对象可以很容易的在不同对象及上下文中传递。
-
-For example, a controller that calls a method that populates an `NSError **` (as discussed in the next section) might pass that error into an alert view:
 
 举个例子，一个 controller 调用一个参数为 `NSError **` 的方法（下一节将会讨论）可以将那个错误传到警告框中：
 
@@ -118,11 +73,7 @@ For example, a controller that calls a method that populates an `NSError **` (as
                   otherButtonTitles:nil, nil] show];
 ~~~
 
-> As a brief non-sequitur: one clever hack used by C functions to communicate errors is to [encode 4-letter ASCII sequences in the 32 bit return type](https://github.com/mattt/Xcode-Snippets/blob/master/checkerror.m). It's no `localizedDescription`, but it's better than cross-referencing error codes from a table every time!
-
 > 作为一个合乎逻辑的推断（？）：一个在 C 函数中使用的交流错误的聪明办法是将[四个字母的 ASCII 码序列编码为 32 比特的返回类型 ](https://github.com/mattt/Xcode-Snippets/blob/master/checkerror.m). 它不是 `本地化的描述`，但至少比每次去找一个交叉引用的错误码表要好！
-
-For sake of completeness: here is a list of the standard `NSError` `userInfo` keys:
 
 为了完整性：以下是标准 `NSError` 的 `userInfo` 的键列表：
 
@@ -136,19 +87,11 @@ For sake of completeness: here is a list of the standard `NSError` `userInfo` ke
 - `NSRecoveryAttempterErrorKey`
 - `NSHelpAnchorErrorKey`
 
-## Using `NSError`
-
 ## 使用 `NSError`
-
-There are two ways in which you will encounter `NSError`: as a consumer and as a producer.
 
 你会在两种情况下遇到 `NSError`：作为消费者，或者作为生产者。
 
-### Consuming
-
 ### 消费
-
-As a consumer, you are primarily concerned with methods that have a final parameter of type `NSError **`. Again, this is to get around the single return value constraint of Objective-C; by passing a pointer to an uninitialized `NSError *` variable, that variable will be populated with any error the method encounters:
 
 为作消费者，你主要关心的是那些最后一个参数类型是 `NSError **` 的方法。同样，这是一种规避 Objective-C 单一返回值的手段；通过传递一个指向未初始化的 `NSError *` 变量的指针，那个变量将会被填入方法调用过程中遇到的错误：
 
@@ -162,11 +105,7 @@ if (!success) {
 }
 ~~~
 
-> According to Cocoa conventions, methods returning `BOOL` to indicate success or failure are encouraged to have a final `NSError **` parameter if there are multiple failure conditions to distinguish between. A good guideline is whether you could imagine that `NSError` bubbling up, and being presented to the user.
-
 > 根据 Cocoa 的惯例，鼓励那些返回 `BOOL` 来表示成功或失败的方法使用 `NSError **` 作为它的最后一个参数，如果有需要作区分的多种可能的失败条件的话。一个好的办法是，你是否能想像那个 `NSError` 将不断向上冒泡，最终呈现给用户。
-
-Another way `NSError` objects are passed is the inclusion of an `NSError *` argument in `completionHandler` blocks. This gets around both a constraint on single value returns as well as one on that value being returned synchronously. This has become especially popular with newer Foundation APIs, like `NSURLSession`:
 
 另一种传递 `NSError` 的方式是把它做为 `completionHandler` 回调的一个参数。这样即可以规避单一返回值的弊端，也可以避免值被同步返回。这种方式在新的 Foundation API 中特别流行，比如 `NSURLSession`：
 
@@ -184,15 +123,9 @@ NSURLSession *session = [NSURLSession sessionWithConfiguration:[NSURLSessionConf
 }] resume];
 ~~~
 
-### Producing
-
 ### 生产
 
-One would be well-advised to follow the same conventions for error handling as other Foundation classes. In situations where a custom method invokes a method with an `NSError **` parameter, it is usually a good idea to similarly pass that `NSError **` parameter into the signature of the custom method. More substantial apps or libraries are encouraged to define their own error domains and error code constants as suitable.
-
-一般非常建议开发者按照其它 Foundation 类库的惯例来处理错误。在一个自定义的方法中调用了另一个带有 `NSError **` 形参的方法的情形下，it is usually a good idea to similarly pass that `NSError **` parameter into the signature of the custom method。鼓励 app 或第三方库适当地定义自己的错误域及错误代码常量。
-
-To pass an error to an `NSError **` parameter, do the following:
+一般非常建议开发者按照其它 Foundation 类库的惯例来处理错误。在一个自定义的方法中调用了另一个带有 `NSError **` 形参的方法的情形下，通常同样地把 `NSError **` 参数传入自定义方法是个好的做法。鼓励 app 或第三方库适当地定义自己的错误域及错误代码常量。
 
 传递一个错误到 `NSError **` 参数，做以下事情：
 
@@ -214,19 +147,11 @@ To pass an error to an `NSError **` parameter, do the following:
 }
 ~~~
 
-## `NSURLErrorDomain` & `CFNetworkErrors`
-
 ## `NSURLErrorDomain` 和 `CFNetworkErrors`
-
-The greatest source of failure in iOS apps is networking. Between radios, transport, data roaming policies, proxies, security, authentication, and any number of protocol-specific negotiation, there is a lot that can go wrong.
 
 iOS 应用中最大的失败来源是网络。在无线信号，信号传输，数据漫游，代理，安全性，认证以及各种协议协商中，每个过程都可能出错。
 
-On the plus side, the Foundation URL Loading system is incredibly mature, and takes care of most of that for you. The only negative is that the documentation for all of the various things that can go wrong is scattered across different programming guides and headers. If you get a request failing with error `-1004`, it can be _surprisingly_ difficult to figure out exactly what that means.
-
 好的一面是，Foundation 中的 URL Loading 系统相当成熟，它接管了大部分事情。唯一不足的是不同的出错信息的文档分散在不同的编程指南和头文件中。如果你收到一个 `-1004` 的失败信息，你很难找出它是什么意思。
-
-As such, here is an exhaustive, well-formatted table at your disposal:
 
 正因如此，这里有一份详尽的、格式化的表格供你查阅：
 
@@ -366,11 +291,7 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 
 * * *
 
-Having scrolled down through that huge table, you might be expecting the usual NSHipster philosophical wrap-up. Not this week. Do you have any idea how long it took to compile that table? It's all, like, `NSRepetitiveStrainInjury` up in here.
-
-把这个巨大的表格从头滚到尾，你可能期望通常的 NSHipster 哲学，收起来。这周不要。你知道编纂这个表格花了多长时间吗？就这样吧，`NSRepetitiveStrainInjury` 立在这里。
-
-Such are the error of my ways.
+从这个巨大的表格头滚到尾，你可能期望看到一如继往的 NSHipster 哲学总结。这周没有。你知道编纂这个表格花了多长时间吗？就这样吧，`NSRepetitiveStrainInjury` 立在这里。
 
 这是我处理错误的方式。
 
