Reapplying change to NSCache from 57b60cc

--- a/2012-07-14-nscache.md
+++ b/2012-07-14-nscache.md
@@ -5,8 +5,8 @@ category: Cocoa
 tags: nshipster
 excerpt: "Poor NSCache, always being overshadowed by NSMutableDictionary. It's as if no one knew how it provides all of that garbage collection behavior that developers take great pains to re-implement themselves."
 status:
-    swift: 2.0
-    reviewed: September 8, 2015
+    swift: 2.2
+    reviewed: April 10, 2016
 ---
 
 Poor `NSCache`, always being overshadowed by `NSMutableDictionary`. It's as if no one knew how it provides all of that garbage collection behavior that developers take great pains to re-implement themselves.
@@ -59,3 +59,6 @@ extension NSCache {
     }
 }
 ```
+
+> **Note:** Due to changes in Objective-C generics in Swift 3, the
+> subscript given above will only work in Swift 2.3 and earlier.
