Fix typo in 2018-07-09-swift-gyb

--- a/2018-07-09-swift-gyb.md
+++ b/2018-07-09-swift-gyb.md
@@ -212,7 +212,7 @@ so be on the lookout to use these instead of brute-forcing with GYB.
 Are you writing code based on a data source?
 Try incorporating GYB into your development!
 
-GYB files can import of Python packages like `json`, `xml`, and `csv`,
+GYB files can import Python packages like `json`, `xml`, and `csv`,
 so you can parse pretty much any kind of file you might encounter:
 
 ```python
