--- a/2018-07-30-never.md
+++ b/2018-07-30-never.md
@@ -88,7 +88,7 @@ enumerations are concrete types
 that can have properties, methods, generic constraints, and nested types.
 Because of this,
 uninhabited enumeration types are used in the Swift standard library to
-[namespace functionality]((https://github.com/apple/swift/blob/a4230ab2ad37e37edc9ed86cd1510b7c016a769d/stdlib/public/core/Unicode.swift#L918)
+[namespace functionality](https://github.com/apple/swift/blob/a4230ab2ad37e37edc9ed86cd1510b7c016a769d/stdlib/public/core/Unicode.swift#L918)
 and
 [reason about generics in a clever way](https://github.com/apple/swift/blob/a6952decab6f918a9df3c6fa342153a9f9204f8e/stdlib/public/core/MemoryLayout.swift#L43).
 
