--- a/2018-07-30-never.md
+++ b/2018-07-30-never.md
@@ -229,7 +229,7 @@ it can be really tough to tell the difference between the two.
 For example,
 consider the following code that
 
-```
+```swift
 let array: [Int]
 let firstIem = array.first!
 ```
@@ -249,7 +249,7 @@ if `Never` is implemented as a bottom type,
 it could be used in the right-hand side of nil-coalescing operator expression.
 
 ```swift
-// Future Swift 🔮
+// Future Swift? 🔮
 let firstItem = array.first ?? fatalError("array cannot be empty")
 ```
 
@@ -282,7 +282,7 @@ to an expression that returns `Never`,
 you could use `throw` on the right-hand side of `??`:
 
 ```swift
-// Future Swift 🔮
+// Future Swift? 🔮
 let firstItem = array.first ?? throw Error.empty
 ```
 
@@ -295,7 +295,7 @@ then the `Never` type could be used to indicate that a function won't throw
 (similar to the `Result` example before):
 
 ```swift
-// Future Swift 🔮
+// Future Swift? 🔮
 func neverThrows() throws<Never> {
     // ...
 }
