--- a/2018-07-30-never.md
+++ b/2018-07-30-never.md
@@ -227,7 +227,7 @@ And without additional information,
 it can be really tough to tell the difference between the two.
 
 For example,
-consider the following code that
+consider the following code that assumes `array` to not be empty:
 
 ```swift
 let array: [Int]
