--- a/2018-07-30-never.md
+++ b/2018-07-30-never.md
@@ -64,7 +64,7 @@ func fatalError(_ message: @autoclosure () -> String = String(),
                      line: UInt = #line) -> Never
 ```
 
-For a type to replace the functionality an annotation,
+For a type to replace the functionality of an annotation,
 it must be pretty complex, right?
 Nope! Actually, just the opposite ---
 `Never` is arguably the simplest type in the entire Swift standard library:
@@ -75,7 +75,7 @@ enum Never {}
 
 ## Uninhabited Types
 
-Never is an <dfn>uninhabited</dfn> type,
+`Never` is an <dfn>uninhabited</dfn> type,
 which means that it has no values.
 Or to put it another way, uninhabited types can't be constructed.
 
@@ -87,10 +87,11 @@ And unlike protocols,
 enumerations are concrete types
 that can have properties, methods, generic constraints, and nested types.
 Because of this,
-uninhabited enumeration types are used in the Swift standard library to
+uninhabited enumeration types are used throughout the Swift standard library
+to do things like
 [namespace functionality](https://github.com/apple/swift/blob/a4230ab2ad37e37edc9ed86cd1510b7c016a769d/stdlib/public/core/Unicode.swift#L918)
 and
-[reason about generics in a clever way](https://github.com/apple/swift/blob/a6952decab6f918a9df3c6fa342153a9f9204f8e/stdlib/public/core/MemoryLayout.swift#L43).
+[reason about types](https://github.com/apple/swift/blob/a6952decab6f918a9df3c6fa342153a9f9204f8e/stdlib/public/core/MemoryLayout.swift#L43).
 
 But `Never` isn't like that.
 It doesn't have any fancy bells or whistles.
@@ -99,6 +100,7 @@ It's special by virtue of it being what it is (or rather, isn't).
 Consider a function declared to return an uninhabited type:
 Because uninhabited types don't have any values,
 the function can't return normally.
+(Because how could they?)
 Instead, the function must either stop execution or run indefinitely.
 
 ## Eliminating Impossible States in Generic Types
@@ -172,7 +174,7 @@ By specifying `Never` as the result's `Error` type,
 we're using the type system to signal that failure is not an option.
 What's really cool about this
 is that Swift is smart enough to know that
-you don' need to handle `.failure` for the `switch` statement to be exhaustive:
+you don't need to handle `.failure` for the `switch` statement to be exhaustive:
 
 ```swift
 alwaysSucceeds { (result) in
@@ -198,7 +200,9 @@ Because `Never` is an uninhabited type,
 there aren't any possible values of it.
 So when we switch over `lhs` and `rhs`,
 Swift understands that there aren't any missing cases.
-And since all cases (of which there aren't any) return `Bool`,
+And since all cases ----
+of which there aren't any ---
+return `Bool`,
 the method compiles without a problem.
 
 _Neat!_
